Add branch listener