@@ -31,3 +31,26 @@ patchPluginXml {
       Add change notes here.<br>
       <em>most HTML tags may be used</em>"""
 }
+
+runIde {
+    jvmArgs = [
+      '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+      '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+      '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
+      '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+      '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
+      '--add-opens', 'java.base/java.util.stream=ALL-UNNAMED',
+      '--add-opens', 'java.base/java.util.function=ALL-UNNAMED',
+      '--add-opens', 'java.base/java.util.regex=ALL-UNNAMED',
+      '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+      '--add-opens', 'java.base/java.time.temporal=ALL-UNNAMED',
+      '--add-opens', 'java.base/java.time.chrono=ALL-UNNAMED',
+      '--add-opens', 'java.base/java.time.format=ALL-UNNAMED',
+      '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+      '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED',
+      '--add-opens', 'java.base/java.nio.file=ALL-UNNAMED',
+      '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+      '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
+      '-ea'
+    ]
+}
